# clutch-node

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.agents/skills/doc/: SKILL.md
.cargo/: config.toml
.github/workflows/: docker-build-push-ghcr.yml  docker-build-push.yml
config/node/: default.toml  node1.toml  node2-docker.toml  node2.toml  node3-docker.toml  node3.toml
examples/: README.md
src/: main.rs
src/node/: account_state.rs  aura.rs  balance_effect.rs  blockchain.rs  configuration.rs  database.rs  mod.rs  node_services.rs  rlp_encoding.rs  signature_keys.rs
src/node/blocks/: block.rs
src/node/p2p_server/: gossipsub_handler.rs  request_response_handler.rs
src/node/transactions/: address.rs  complain_arrival.rs  confirm_arrival.rs  function_call.rs  mod.rs  passenger_concurrent.rs  ride_acceptance.rs  ride_cancel.rs  ride_offer.rs  ride_pay.rs  ride_request.rs  ride_request_cancel.rs  transaction.rs  transfer.rs  tx_hash_pointer.rs
src/node/wss/: websocket.rs
tests/: author_block.rs  balance_effects.rs  block_reward.rs  db_error_handling.rs  p2p_server_tests.rs  referrer_account.rs  ride_sharing.rs  rlp_decode_test.rs  transfer.rs
