[package]
name = "clutch_node"
version = "0.0.1"
edition = "2021"
authors = ["Mehran Mazhar <mehran.mazhar@gmail.com>"]
license = "Apache-2.0"
description = "A decentralized blockchain-based ride-sharing platform"
homepage = "https://github.com/MehranMazhar/clutch-node"
repository = "https://github.com/MehranMazhar/clutch-node"
keywords = ["blockchain", "ride-sharing", "decentralized", "p2p"]
categories = ["network-programming", "blockchain"]
readme = "README.md"

# Specify the binary target
[[bin]]
name = "clutch-node"
path = "src/main.rs"

[dev-dependencies]
serial_test = "3.1.1"

[dependencies]
rocksdb = "0.22.0"
config = "0.14.0"
dotenv = "0.15"
sha2 = "0.10.8"
sha3 = "0.10.1"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
secp256k1 = { version = "0.29.1", features = ["recovery", "rand"] }
rand = "0.8.5"
hex = "0.4.3"
backtrace = "0.3.73"
tokio = { version = "1.40.0", features = ["full"] }
futures = { version = "0.3.30" }
libp2p = { version = "0.56.0", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
    "request-response",
    "cbor",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.17", features = ["derive"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.24.0"
rlp = "0.5.2"
async-trait = "0.1.81"
prometheus-client = "0.22.3"
axum = "0.7.5"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
chrono = "0.4.38"